[ADD] sections in featurse selections

--- a/Feature-selection.ipynb
+++ b/Feature-selection.ipynb
@@ -197,6 +197,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0b0eb5a4-b9de-4e53-a17f-b56fa51e6b43",
+   "metadata": {},
+   "source": [
+    "### Feature Importance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "f06aa464-be68-4a68-bdd6-d56075fd39df",
@@ -245,6 +253,14 @@
     "feat_importances = pd.Series(model.feature_importances_, index=X.columns)\n",
     "feat_importances.nlargest(10).plot(kind='barh')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2193211-f1a5-414a-9147-d4ffe108376d",
+   "metadata": {},
+   "source": [
+    "### Most positive/negative correlated features with HasDetections"
    ]
   },
   {
