--- a/Feature-selection.ipynb
+++ b/Feature-selection.ipynb
@@ -72,6 +72,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84d741ac-f5ad-4abe-83f8-326be95b80a1",
+   "metadata": {},
+   "source": [
+    "This must not be done if the computer is capable to work with all observations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "6dbdf894-119f-41bc-a9a7-e068a2baf9b8",
@@ -338,14 +346,6 @@
    "source": [
     "_corr.nsmallest(10).plot(kind='barh')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b33826e-499c-4d51-89e0-e419e7391b0b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
