--- a/Feature-selection.ipynb
+++ b/Feature-selection.ipynb
@@ -256,6 +256,11 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Warn :\n",
+    " -n_jobs for parallel work\n",
+    " -if computer is capable then n_estimators could be \n",
+    "\"\"\"\n",
     "model = ExtraTreesClassifier(n_estimators=10, n_jobs=4)\n",
     "model.fit(X,y)\n",
     "feat_importances = pd.Series(model.feature_importances_, index=X.columns)\n",
