[FIX] feature selection, final features

--- a/Feature Selection.ipynb
+++ b/Feature Selection.ipynb
@@ -5,7 +5,7 @@
    "id": "665fb5a7-3566-423a-af15-b8d0e00d7153",
    "metadata": {},
    "source": [
-    "# EDA & Preprocessing\n",
+    "# Feature Selection\n",
     "Project 2 - Malware Infection\n",
     "\n",
     "Authors: Michele Benvenuto, Roberto Figueroa, Gustavo Mendez"
