--- a/NaiveBayes.ipynb
+++ b/NaiveBayes.ipynb
@@ -450,36 +450,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_roc_curves(y, y_pred):\n",
-    "    y_ = y\n",
-    "    pred = y_pred\n",
-    "    # Compute ROC curve and ROC area for each class\n",
-    "    fpr = dict()\n",
-    "    tpr = dict()\n",
-    "    roc_auc = dict()\n",
-    "    n_classes=1\n",
-    "    for i in range(n_classes):\n",
-    "        fpr, tpr, _= roc_curve(y, y_pred)\n",
-    "        roc_auc = auc(fpr, tpr)\n",
-    "\n",
-    "    plt.figure()\n",
-    "    lw = 2\n",
-    "    plt.plot(\n",
-    "        fpr,\n",
-    "        tpr,\n",
-    "        color=\"darkorange\",\n",
-    "        lw=lw,\n",
-    "        label=\"ROC curve (area = %0.2f)\" % roc_auc,\n",
-    "    )\n",
-    "    plt.rcParams[\"figure.figsize\"] = (5,5)\n",
-    "    plt.plot([0, 1], [0, 1], color=\"navy\", lw=lw, linestyle=\"--\")\n",
-    "    plt.xlim([0.0, 1.0])\n",
-    "    plt.ylim([0.0, 1.05])\n",
-    "    plt.xlabel(\"False Positive Rate\")\n",
-    "    plt.ylabel(\"True Positive Rate\")\n",
-    "    plt.title(\"Curva ROC\")\n",
-    "    plt.legend(loc=\"lower right\")\n",
-    "    plt.show()"
+    "# TBD"
    ]
   }
  ],
@@ -490,7 +461,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -504,9 +475,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
